Change folder structure

--- a/backend/templates/index.html
+++ b/backend/templates/index.html
@@ -43,7 +43,7 @@
     </main>
 </div>
 
-<script src="script.js"></script>
+<script src="/static/script.js"></script>
 <footer class="border-t p-4 text-center text-sm text-gray-500 mt-8">
     Connect with me:
     <a href="https://www.linkedin.com/in/bhavin-thumar/" target="_blank" class="text-purple-600 hover:underline mx-2">LinkedIn</a> |
